<resources>
    <!-- App Name -->
    <string name="app_name" translatable="false">Audiate</string>
    <string name="splash_screen_text" translatable="false">Audiate</string>

    <!-- Log-In -->
    <string name="log_in_button">Log In</string>
    <string name="about_button">About "Audiate"</string>
    <string name="create_profile_button">Create Profile</string>
    <string name="clear_all_users_button">Clear All Users</string>

    <!-- Create / Edit Profile -->
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="low_pitch">Low Pitch</string>
    <string name="high_pitch">High Pitch</string>
    <string name="vocal_range">Vocal Range</string>
    <string name="confirm_profile_button">Confirm Profile</string>
    <string name="detect_vocal_range_button">Detect Vocal Range</string>

    <!-- Unused in Profile Right Now -->
    <string name="user_name_email">User Name or Email</string>
    <string name="cancel_button">Cancel</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- Detect Vocal Range Activity -->
    <string name="detect_vocal_range_activity_title_text" translatable="false">@string/detect_vocal_range_button</string>
    <string name="detect_vocal_range_activity_info_text">TODO: add activity instructions here…</string>
    <string name="detect_high_note">Detect High Note</string>
    <string name="detect_low_note">Detect Low Note</string>
    <string name="confirm_vocal_range">Confirm Vocal Range</string>

    <!-- Main Menu -->
    <string name="welcome_message">Welcome %1$s</string>
    <string name="main_menu">Main Menu</string>
    <string name="ear_training_button">Ear Training</string>
    <string name="sight_singing_button">Sight Singing</string>
    <string name="exercises_button">Exercises</string>
    <string name="sound_library_button">Sound Library</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="log_out_button">Log Out</string>
    <string name="google_maps_button">Google Maps</string>
    <string name="general_settings">General Settings</string>

    <!-- Exercise Selection Texts -->
    <string name="exercise_selection_menu_title">Exercise Selection Menu</string>
    <string name="return_to_main_button">Return to Main Menu</string>
    <string name="search_exercises">Search </string>
    <string name="exercises"> Exercises</string>
    <string name="select_exercise_button">Select An Exercise</string>
    <string name="start_exercise_button">Launch this Exercise!</string>
    <string name="exercise_help_button">Help</string>

    <string name="intervals_desc_text">\s exercises focused on musical intervals\-\-the distance between two unique pitches.</string>
    <string name="chords_desc_text">\s exercises based on chord-quality.</string>
    <string name="scales_desc_text">\s exercises drawn from a vast library of musical scales, modes, and melodic patterns.</string>

    <!-- Exercise List Item -->
    <string name="exercise_name">[Exercise Name]</string>
    <string name="exercise_difficulty">Difficulty: \s</string>
    <string name="difficulty_1">Beginner</string>
    <string name="difficulty_2">Intermediate</string>
    <string name="difficulty_3">Proficient</string>
    <string name="difficulty_4">Advanced</string>
    <string name="difficulty_5">Expert</string>
    <string name="difficulty_6">Master</string>

    <!-- Ear Training Exercises Selection Menu -->
    <string name="listening_exercise_selection">Listening Exercises</string>
    <string name="listening_exercises_description_text">Ear-training exercises designed to hone
        one\'s ability to identify musical material presented in various forms.</string>
    <string name="interval_identification_exercises_button">Interval Identification</string>
    <string name="chord_quality_exercises_button">Chord Quality</string>
    <string name="modeScale_exercises_button">Scales and Modes</string>
    <string name="ear_training_menu_button">Ear Training Menu</string>

    <!-- Sight Singing Exercises Selection Menu -->
    <string name="singing_exercise_selection">Singing Exercises</string>
    <string name="singing_exercises_description_text">Singing exercises designed to hone
        one\'s ability to accurately perform musical material in various forms.</string>
    <string name="interval_singing_exercises_button">Interval Exercises</string>
    <string name="chord_arpeggio_exercises_button">Arpeggios</string>
    <string name="melody_singing_exercises_button">Sight Singing</string>
    <string name="singing_exercise_menu_button">Singing Exercises</string>

    <!-- Ear Training Quiz -->
    <string name="question">Question %1$d of %2$d</string>
    <string name="guess">Guess the %1$s</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="results">%1$d guesses, %2$.01f%% correct</string>
    <string name="guess_interval">Guess the Interval</string>
    <string name="chord_type">Chords</string>
    <string name="mode_type">Modes</string>

    <!-- SoundObjectLibrary Activity -->
    <string name="select_materials">[Select Musical Materials]</string>
    <string name="select_intervals">Intervals</string>
    <string name="select_chords">Chords</string>
    <string name="select_scales">Scales</string>

    <string name="sort_none">[Sort by]</string>
    <string name="sort_name_a_z">Name A-Z</string>
    <string name="sort_name_z_a">Name Z-A</string>
    <string name="sort_small_large">Size (Ascending)</string>
    <string name="sort_large_small">Size (Descending)</string>

    <!-- Filters -->
    <string name="all_intervals">List of Pitch Intervals</string>
    <string name="all_harmonics">Harmonics (First 127)</string>
    <string name="limit_intervals">Limit Intervals</string>
    <string name="meantone_intervals">Meantone Intervals</string>
    <string name="superparticular_intervals">Superparticular Intervals</string>
    <string name="et_intervals">Equal-Tempered (by approximation)</string>
    <string name="pythag_intervals">Pythagorean Ratios</string>
    <string name="comma_intervals">Commas</string>
    <string name="oct_anatomy">"Anatomy of an Octave" by Kyle Gann</string>





    <string name="header_info_hint">Header text / info / instructions…</string>
    <string name="select_material">Select material to audition: </string>
    <string name="sort_material">Sort by: </string>
    <string name="filter_material">Filter: </string>
    <string name="search">Search: </string>
    <string name="set_fundamental_frequency_hint">Set fundamental frequency in Hertz</string>
    <string name="test_fundamental_frequency">(Test Fundamental Frequency)</string>
    <string name="selection_name">Selection Name</string>
    <string name="selection_description">Selection Description…</string>
    <string name="interval_ratio">Ratio: </string>
    <string name="interval_cents">Size in cents: </string>
    <string name="chordScale_size">Size: </string>

    <string name="playback_settings">-- Playback Settings --</string>
    <string name="playback_mode1">Mode 1</string>
    <string name="playback_mode2">Mode 2</string>
    <string name="playback_mode3">Mode 3</string>
    <string name="playback_mode4">Mode 4</string>

    <string name="block_chord">Block Chord</string>
    <string name="arp_up">Arp. Up</string>
    <string name="arp_down">Arp. Down</string>

    <string name="cluster_chord">Cluster Chord</string>
    <string name="scale_up">Scale Up</string>
    <string name="scale_down">Scale Down</string>

    <string name="aux1" translatable="false">aux1</string>
    <string name="aux2" translatable="false">aux2</string>

    <string name="aux_interval_invert">Invert Interval</string>
    <string name="aux_chord_invert">Invert Chord</string>
    <string name="aux_scale_invert">Invert Scale</string>

    <string name="play_selection">Play Selection</string>

    <!-- Ear Training Quiz Settings -->
    <string name="intervals">Intervals</string>
    <string name="intervals_description">How difficult would you like the interval quiz?</string>
    <string name="pref_default" translatable="false">@string/intervals</string>
    <string name="pref_key" translatable="false">pref_quiz_type</string>
    <string name="quiz_type">Type of Quiz</string>
    <string name="quiz_type_description">Choose interval, chord, or modal</string>
    <string name="number_of_buttons">Number of Buttons</string>
    <string name="number_of_buttons_description">2, 4, 6, or 8 guess buttons</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="default_quiz_type">Interval</string>
    
    
    <!-- SoundObject Strings -->
    <string name="scale_period">Periodic Interval: \s</string>
    <string name="scale_size">Size: \s</string>


</resources>
