<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.rmillett.audiate.MainMenuActivity"
    >

    <TextView
        android:id="@+id/mainMenuTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="25dp"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <LinearLayout
        android:id="@+id/activityButtonLinearLayout"
        android:paddingVertical="@dimen/buttons_padding"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="3">

        <Button
            android:id="@+id/earTrainingButton"
            android:layout_marginTop="150dp"
            android:text="@string/ear_training_button"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="activitySelectionHandler"/>

        <Button
            android:id="@+id/sightSingingButton"
            android:text="@string/sight_singing_button"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="activitySelectionHandler"
            android:layout_marginBottom="50dp"/>

        <Button
            android:id="@+id/libraryButton"
            android:text="@string/sound_library_button"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="activitySelectionHandler"/>

        <Button
            android:id="@+id/googleMapsButton"
            android:textSize="@dimen/small_text_size"
            android:text="@string/google_maps_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="activityGoogleMaps"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:paddingVertical="@dimen/buttons_padding"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/editProfileButton"
            android:text="@string/edit_profile_button"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="editProfile"/>

        <Button
            android:id="@+id/logoutButton"
            android:text="@string/log_out_button"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="logOut"/>


    </LinearLayout>



</LinearLayout>
