<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.rmillett.audiate.ProfileActivity">


    <EditText
        android:id="@+id/userNameCreateEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <EditText
        android:id="@+id/emailCreateEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/buttons_text_margin"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <EditText
        android:id="@+id/passwordCreateEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/buttons_text_margin"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <TextView
        android:id="@+id/lowPitchTextView"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/buttons_text_margin"
        android:ems="10"
        android:hint="@string/low_pitch"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <TextView
        android:id="@+id/highPitchTextView"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/buttons_text_margin"
        android:ems="10"
        android:hint="@string/high_pitch"
        android:text=""
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <TextView
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="@dimen/buttons_text_margin"
        android:ems="10"
        android:hint="@string/vocal_range"
        android:text=""
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/detectVocalRangeButton"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/detect_vocal_range_button"
            android:textSize="@dimen/medium_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="createUser"
            android:padding="@dimen/buttons_padding"
            android:text="@string/confirm_profile_button"
            android:textSize="@dimen/medium_text_size"/>

    </LinearLayout>
</LinearLayout>
