<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.rmillett.audiate.DetectVocalRangeActivity">


    <TextView
        android:id="@+id/detectVocalRangeHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:hint="@string/detect_vocal_range_button"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size" />

    <TextView
        android:id="@+id/detectVocalRangeInstructionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/detect_vocal_range_activity_info_text" />

    <LinearLayout
        android:id="@+id/detectVocalRangeResultsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="75dp"
        android:orientation="vertical"
        android:padding="@dimen/buttons_padding">

        <ImageView
            android:id="@+id/vocalRangeResultsImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/detectHighNoteLowNoteButtonGroupLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:weightSum="2">

        <Button
            android:id="@+id/detectHighNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_blue_bg"
            android:onClick="detectPitchHandler"
            android:padding="@dimen/buttons_padding"
            android:text="@string/detect_high_note"
            android:textSize="40dp" />

        <Button
            android:id="@+id/detectLowNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/custom_blue_bg"
            android:onClick="detectPitchHandler"
            android:padding="@dimen/buttons_padding"
            android:text="@string/detect_low_note"
            android:textSize="40dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmVocalRangeButtonLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="@dimen/buttons_padding">

        <Button
            android:id="@+id/confirmVocalRangeButton"
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:background="@drawable/custom_green_bg"
            android:fontFamily="serif"
            android:onClick="confirmVocalRange"
            android:padding="@dimen/buttons_padding"
            android:text="@string/confirm_vocal_range"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold|italic" />

    </LinearLayout>

</LinearLayout>
