<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.rmillett.audiate.EarTrainingMenuActivity">

    <TextView
        android:id="@+id/ear_training_menu_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="25dp"
        android:text="@string/ear_training_exercise_selection"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3">

        <LinearLayout
            android:id="@+id/earTrainingButtonLinearLayout"
            android:paddingVertical="@dimen/buttons_padding"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="top"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/intervalExerciseButton"
                android:text="@string/interval_identification_exercises_button"
                android:textSize="@dimen/small_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="selectionHandler"/>

            <Button
                android:id="@+id/chordQualityExerciseButton"
                android:text="@string/chord_quality_exercises_button"
                android:textSize="@dimen/small_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="selectionHandler"/>

            <Button
                android:id="@+id/scalesModesExerciseButton"
                android:text="@string/modeScale_exercises_button"
                android:textSize="@dimen/small_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="selectionHandler"/>

            <TextView
                android:id="@+id/earTrainingSelectionDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="@dimen/small_text_size"
                android:hint="Selection description..."/>

        </LinearLayout>

        <ListView
            android:id="@+id/earTrainingExercisesListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/earTrainingStartActivityButton"
            android:text="@string/start_exercise_button"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="startActivity"/>

        <Button
            android:id="@+id/earTrainingHelpButton"
            android:text="@string/exercise_help_button"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="help"/>

    </LinearLayout>




</LinearLayout>