<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.rmillett.audiate.LoginActivity"
    android:weightSum="1">


    <EditText
        android:id="@+id/emailLoginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="@dimen/buttons_text_margin"
        android:layout_marginRight="@dimen/buttons_text_margin"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text=""
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <EditText
        android:id="@+id/passwordLoginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/buttons_text_margin"
        android:layout_marginRight="@dimen/buttons_text_margin"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:orientation="horizontal"
        android:layout_weight="0.30">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/confirm_vocal_bg"
            android:layout_weight="1"
            android:layout_margin="25dp"
            android:padding="@dimen/buttons_padding"
            android:textSize="@dimen/medium_text_size"
            android:onClick="handleLoginButtons"
            android:text="@string/log_in_button"/>

        <Button
            android:id="@+id/createProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/low_high_note_button_bg"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:padding="@dimen/buttons_padding"
            android:textSize="@dimen/medium_text_size"
            android:onClick="handleLoginButtons"
            android:text="@string/create_profile_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="775dp"
        android:layout_height="200dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/googleMaps"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:clickable="true"
            android:onClick="activityGoogleMaps"
            app:srcCompat="@drawable/google_maps_icon"/>

        </LinearLayout>

</LinearLayout>

