<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.rmillett.audiate.ExerciseSelectionMenuActivity">

    <TextView
        android:id="@+id/exerciseSelectionMenuTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="25dp"
        android:hint="@string/exercise_selection_menu_title"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3">

        <LinearLayout
            android:id="@+id/exerciseButtonsLinearLayout"
            android:paddingVertical="@dimen/buttons_padding"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="top"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/exercise1Button"
                android:hint="Exercise 1"
                android:textSize="@dimen/small_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="exerciseSelectionHandler"/>

            <Button
                android:id="@+id/exercise2Button"
                android:hint="Exercise 2"
                android:textSize="@dimen/small_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="exerciseSelectionHandler"/>

            <Button
                android:id="@+id/exercise3Button"
                android:hint="Exercise 3"
                android:textSize="@dimen/small_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="exerciseSelectionHandler"/>

            <TextView
                android:id="@+id/exerciseDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="@dimen/small_text_size"
                android:hint="Selection description..."/>

        </LinearLayout>

        <ListView
            android:id="@+id/exercisesCategoriesListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/startExerciseButton"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/start_exercise_button"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="startActivity"/>

        <Button
            android:id="@+id/exerciseSelectionHelpButton"
            android:text="@string/exercise_help_button"
            android:textSize="@dimen/small_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="help"/>

    </LinearLayout>

</LinearLayout>